objects/ServiceOrderControl__c.object
<CustomObject>
    <fields>
        <fullName>LineNo__c</fullName>
        <label>ライン番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NyukaYoteDateFormula__c</fullName>
        <formula>Datevalue(NyukaYoteDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>入荷予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NyukaYoteDate__c</fullName>
        <label>入荷予定日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProductItemInfo__c</fullName>
        <formula>ProductItem__r.Name  + IF( ISNULL(ProductItem__r.JapaneseName__c ), &apos;&apos;, &apos; （&apos; + ProductItem__r.JapaneseName__c + &apos;）&apos; )</formula>
        <label>品目（品目名）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>品目</label>
        <referenceTo>ProductItem__c</referenceTo>
        <relationshipLabel>サービスオーダ材料費</relationshipLabel>
        <relationshipName>ServiceOrderControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RetrieveDateFormula__c</fullName>
        <formula>Datevalue(RetrieveDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>回収日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RetrieveDate__c</fullName>
        <label>回収日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReturnDateFormula__c</fullName>
        <formula>Datevalue(ReturnDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>返却日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReturnDate__c</fullName>
        <label>返却日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReturnDueDateFormula__c</fullName>
        <formula>Datevalue(ReturnDueDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>返却予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReturnDueDate__c</fullName>
        <label>返却予定日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SWAPKubun__c</fullName>
        <label>SWAP区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceOrderControlNo__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>サービスオーダ材料費No</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ServiceOrder__c</fullName>
        <label>サービスオーダ</label>
        <referenceTo>ServiceOrder__c</referenceTo>
        <relationshipLabel>サービスオーダ材料費</relationshipLabel>
        <relationshipName>ServiceOrderControls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SetNo__c</fullName>
        <label>セット番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShukaSuryo__c</fullName>
        <label>出荷数量</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShukkaDateFormula__c</fullName>
        <formula>Datevalue(ShukkaDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出荷日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShukkaDate__c</fullName>
        <label>出荷日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShukkaStatusCode__c</fullName>
        <label>出荷状況コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShukkaStatus__c</fullName>
        <label>出荷状況</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuryoInfo__c</fullName>
        <formula>IF( ISNULL( Suryo__c ), &apos;0&apos; , TEXT( Suryo__c )) + &apos; &apos; + Tani__c</formula>
        <label>数量（単位）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suryo__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tani__c</fullName>
        <label>単位</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UketsukeTantosha__c</fullName>
        <label>受付担当者</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>サービスオーダ材料費</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5 OR 6 OR 7 OR 8 OR 9 OR 10)</booleanFilter>
        <columns>ServiceOrder__c</columns>
        <columns>ProductItem__c</columns>
        <columns>ProductItemInfo__c</columns>
        <columns>SWAPKubun__c</columns>
        <columns>UketsukeTantosha__c</columns>
        <columns>ShukkaStatus__c</columns>
        <columns>ShukkaDateFormula__c</columns>
        <columns>ReturnDateFormula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceOrder__c</field>
            <operation>contains</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>ShukkaDateFormula__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </filters>
        <filters>
            <field>ServiceOrder__c</field>
            <operation>contains</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>UketsukeTantosha__c</field>
            <operation>contains</operation>
            <value>27160202</value>
        </filters>
        <filters>
            <field>UketsukeTantosha__c</field>
            <operation>contains</operation>
            <value>27106658</value>
        </filters>
        <filters>
            <field>UketsukeTantosha__c</field>
            <operation>contains</operation>
            <value>27160229</value>
        </filters>
        <filters>
            <field>UketsukeTantosha__c</field>
            <operation>contains</operation>
            <value>27160211</value>
        </filters>
        <filters>
            <field>UketsukeTantosha__c</field>
            <operation>contains</operation>
            <value>27110736</value>
        </filters>
        <filters>
            <field>UketsukeTantosha__c</field>
            <operation>contains</operation>
            <value>27160440</value>
        </filters>
        <filters>
            <field>UketsukeTantosha__c</field>
            <operation>contains</operation>
            <value>27160768</value>
        </filters>
        <label>大阪SWAP品回収</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>All_select</fullName>
        <columns>ServiceOrder__c</columns>
        <columns>ProductItem__c</columns>
        <columns>ProductItemInfo__c</columns>
        <columns>SWAPKubun__c</columns>
        <columns>UketsukeTantosha__c</columns>
        <columns>ShukkaStatus__c</columns>
        <columns>ShukkaDateFormula__c</columns>
        <columns>ReturnDateFormula__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>SWAP</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5 OR 6 OR 7)</booleanFilter>
        <columns>ServiceOrder__c</columns>
        <columns>ProductItem__c</columns>
        <columns>ProductItemInfo__c</columns>
        <columns>SWAPKubun__c</columns>
        <columns>UketsukeTantosha__c</columns>
        <columns>ShukkaStatus__c</columns>
        <columns>ShukkaDateFormula__c</columns>
        <columns>ReturnDateFormula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceOrder__c</field>
            <operation>contains</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>ShukkaDateFormula__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </filters>
        <filters>
            <field>ServiceOrder__c</field>
            <operation>contains</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>UketsukeTantosha__c</field>
            <operation>contains</operation>
            <value>27160431</value>
        </filters>
        <filters>
            <field>UketsukeTantosha__c</field>
            <operation>contains</operation>
            <value>27111821</value>
        </filters>
        <filters>
            <field>UketsukeTantosha__c</field>
            <operation>contains</operation>
            <value>27160563</value>
        </filters>
        <filters>
            <field>UketsukeTantosha__c</field>
            <operation>contains</operation>
            <value>27160954</value>
        </filters>
        <label>名古屋SWAP品回収</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>サービスオーダ材料費名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>